--- a/fonts.html
+++ b/fonts.html
@@ -251,8 +251,10 @@
     <br><br><br>
 
   <!-- Footer -->
-    <footer class="py-5 bg-dark">
+<footer class="py-5 bg-dark">
+
       <div style="color:white;" class="container">
+        <div class="comfortaa">Made with <i class="fa fa-coffee"></i> and <i class="fa fa-heart"></i></div>
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">DopeFonts CSS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dopefonts.github.io" property="cc:attributionName" rel="cc:attributionURL">Kshitij Bombarde</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://dopefonts.github.io" rel="dct:source">http://dopefonts.github.io</a>.
       </div>
       <!-- /.container -->
